// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> loads blogPost entries 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<Home /> loads blogPost entries 2`] = `
<div>
  [{"title":"Amazing Title","slug":"amazing-title","body":"What a body!"}]
</div>
`;
